--- a/styles/architects.css
+++ b/styles/architects.css
@@ -7,3 +7,80 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* Shared Styles */
+.display-flex{
+    display: flex;
+}
+
+/* dark 02 */
+.text-gray{
+    color:#424242;
+}
+/* dark 03 */
+.text-light-gray{
+    color:#727272;
+}
+.bg-color{
+    background-color:rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    color:white;
+    font-size: 1.25rem;
+    font-weight: 600px;
+    padding:20px 25px;
+    border-radius: 8px;
+    border:none;
+}
+/* header styles */
+
+/* navbar related styles */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.brand{
+    font-weight:bold;
+    font-size: 3rem;
+    /* margin-left: 200px; */
+
+}
+.nav-item{
+    list-style: none;
+    margin-right:30px;
+}
+.nav-link{
+    text-decoration: none;
+}
+/* .nav-links{
+     margin-right: 150px;
+} */
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;   
+}
+
+/* Banner Related Content */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 34px;
+}
+.banner-title{
+    font-size: 4rem;
+    font-size: bold;
+}
+.banner-image{
+    width:100%;
+}
+
+/* Responsive Media Query */
+@media screen and (max-width:576px){
+    .navbar,.nav-links {
+        flex-direction: column;
+    }
+}
