--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,7 +12,9 @@
 .display-flex{
     display: flex;
 }
-
+.text-primary{
+    color:#FF900E;
+}
 /* dark 02 */
 .text-gray{
     color:#424242;
@@ -34,6 +36,19 @@
     border-radius: 8px;
     border:none;
 }
+
+main{
+    max-width:1440px;
+    margin:0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
 /* header styles */
 
 /* navbar related styles */
@@ -78,9 +93,51 @@
     width:100%;
 }
 
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:24px;
+}
+.our-features {
+    margin-left:130px;
+    max-width: 537px;
+    max-height: 304px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
 /* Responsive Media Query */
 @media screen and (max-width:576px){
-    .navbar,.nav-links {
+    .navbar,
+    .nav-links,
+    .teams
+     {
         flex-direction: column;
     }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
+}
+
+/* Medium Size Device */
+@media screen and ((min-width: 576px) and (max-width: 992px) ){
+    .teams
+    {
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
+    
 }
