--- a/styles/architects.css
+++ b/styles/architects.css
@@ -143,6 +143,23 @@ main > section{
 .fact-description{
     max-width: 540px;
 }
+
+/* Our sponsor related styles */
+.sponsor-info{
+    max-width: 542px;
+    margin:50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin-bottom: 130px;
+}
+
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 /* Responsive Media Query */
 @media screen and (max-width:576px){
     .navbar,
@@ -151,8 +168,11 @@ main > section{
     {
         flex-direction: column;
     }
-    .team-img-container{
-        grid-template-columns: repeat(1, 1fr);
+    .team-img-container,
+    .facts-container,
+    .sponsor-companies
+    {
+        grid-template-columns: 1fr;
     }
     .our-features{
         margin-left: 20px;
@@ -160,6 +180,11 @@ main > section{
     .our-features{
         margin: 50px auto;
     }
+    .facts-container, .sponsor-companies{
+        justify-items: center;
+        gap:24px;
+    }
+
 }
 
 /* Medium Size Device */
@@ -170,5 +195,10 @@ main > section{
     }
     .our-features{
         margin: 50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
